Fix file paths on linux, improve cursor rendering